--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/bootstrap.min.css">
 </head>
 <body>
-    <h1>Hello Panda!</h1>
+    <h1>Hello Panda! I'm here.</h1>
 
     <script src="js/bootstrap.min.js"></script>
 </body>
