panda commerce updated

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Panda Commerce</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="shortcut icon" href="images/icon.png" type="image/x-icon">
 </head>
 <body>
     <header class="container">
