--- a/index.html
+++ b/index.html
@@ -8,32 +8,32 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="shortcut icon" href="images/icon.png" type="image/x-icon">
 </head>
-<body>
-    <header class="container">
-        <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
-            <div class="container-fluid">
-              <a class="navbar-brand" href="#"><img src="images/logo.png" alt=""></a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
-                  <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Home</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#shoes">Shoes</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#backpack">Backpack</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#subscribe">Subscribe</a>
-                  </li>
-                </ul>
-              </div>
-            </div>
-          </nav>
+<body class="container">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#"><img src="images/logo.png" alt=""></a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#shoes">Shoes</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#backpack">Backpack</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#subscribe">Subscribe</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+    <header>
           <div id="carouselExampleControls" class="carousel slide panda-slide mt-5" data-bs-ride="carousel">
             <div class="carousel-inner">
               <div class="carousel-item active">
