panda commerce footer updated

--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
 </section>
     </main>
     <footer class="text-center mt-5">
-        <small>©2020. Panda Commerce. All rights reserved. Sofia, Bulgaria.</small>
+        <small>©2021. Panda Commerce. All rights reserved by Ratul Khan.</small>
     </footer>
 
     <script src="js/bootstrap.min.js"></script>
